# Tunnel

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  LICENSE  OPENSOURCE.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  audit.py  check_security.py  exploit_test.py  gemini_recomendation.md  security_test.py  spoof_attack.py
.claude/: settings.local.json
.github/workflows/: ci.yml  flatpak-release.yml
external-project/Shortwave-main/: .deny.toml  .gitignore  .gitlab-ci.yml  .typos.toml  Cargo.toml  README.md  meson.build
external-project/Shortwave-main/build-aux/: de.haeckerfelix.Shortwave.Devel.json
external-project/Shortwave-main/data/: de.haeckerfelix.Shortwave.desktop.in.in  de.haeckerfelix.Shortwave.gresource.xml.in  de.haeckerfelix.Shortwave.gschema.xml.in  de.haeckerfelix.Shortwave.metainfo.xml.in.in  meson.build
external-project/Shortwave-main/data/gtk/: add_station_dialog.ui  device_dialog.ui  device_indicator.ui  device_row.ui  library_page.ui  player.ui  player_gadget.ui  player_toolbar.ui  player_view.ui  preferences_dialog.ui  recording_indicator.ui  search_filter.ui  search_page.ui  shortcuts_dialog.ui  station_cover.ui  station_dialog.ui  station_row.ui  style.css  track_dialog.ui  track_row.ui  volume_control.ui  window.ui
external-project/Shortwave-main/po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  is.po  it.po  ka.po  kk.po  kw.po  nn.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  (+4 more)
external-project/Shortwave-main/src/: app.rs  config.rs  i18n.rs  main.rs  meson.build  path.rs  utils.rs
external-project/Shortwave-main/src/api/: client.rs  cover_loader.rs  error.rs  http.rs  mod.rs  station.rs  station_metadata.rs  station_model.rs  station_request.rs  station_sorter.rs
external-project/Shortwave-main/src/audio/: gstreamer_backend.rs  mod.rs  mpris.rs  playback_state.rs  player.rs  recording_mode.rs  recording_state.rs  track.rs  track_model.rs
external-project/Shortwave-main/src/database/: connection.rs  library.rs  library_status.rs  mod.rs  models.rs  queries.rs
external-project/Shortwave-main/src/device/: cast_sender.rs  device.rs  device_discovery.rs  device_kind.rs  device_model.rs  mod.rs
external-project/Shortwave-main/src/settings/: key.rs  mod.rs  settings_manager.rs
external-project/Shortwave-main/src/ui/: about_dialog.rs  add_station_dialog.rs  device_dialog.rs  device_indicator.rs  device_row.rs  display_error.rs  mod.rs  preferences_dialog.rs  recording_indicator.rs  scalable_image.rs  station_cover.rs  station_dialog.rs  station_row.rs  track_dialog.rs  track_row.rs  volume_control.rs  window.rs
external-project/Shortwave-main/src/ui/pages/: library_page.rs  mod.rs  search_page.rs
external-project/Shortwave-main/src/ui/player/: mod.rs  player_gadget.rs  player_toolbar.rs  player_view.rs
external-project/Shortwave-main/src/ui/search/: mod.rs  search_filter.rs  search_filter_item.rs
external-project/fractal-main-src/src/: application.rs  config.rs.in  error_page.blp  error_page.rs  i18n.rs  intent.rs  main.rs  meson.build  prelude.rs  shortcuts-dialog.blp  ui-blueprint-resources.in  ui-resources.gresource.xml.in  user_facing_error.rs  window.blp  window.rs
external-project/fractal-main-src/src/account_chooser_dialog/: account_row.blp  account_row.rs  mod.blp  mod.rs
external-project/fractal-main-src/src/account_settings/: mod.blp  mod.rs  notifications_page.blp  notifications_page.rs
external-project/fractal-main-src/src/account_switcher/: account_switcher_button.blp  account_switcher_button.rs  account_switcher_popover.blp  account_switcher_popover.rs  avatar_with_selection.blp  avatar_with_selection.rs  mod.rs  session_item.blp  session_item.rs
external-project/fractal-main-src/src/components/: action_button.blp  action_button.rs  context_menu_bin.blp  context_menu_bin.rs  custom_entry.rs  drag_overlay.rs  label_with_widgets.rs  mod.rs  offline_banner.rs  role_badge.rs  scale_revealer.rs  user_page.blp  user_page.rs
external-project/fractal-main-src/src/contrib/: mod.rs  qr_code.rs
external-project/fractal-main-src/src/identity_verification_view/: accept_request_page.blp  accept_request_page.rs  cancelled_page.blp  cancelled_page.rs  choose_method_page.blp  choose_method_page.rs  completed_page.blp  completed_page.rs  confirm_qr_code_page.blp  confirm_qr_code_page.rs  mod.blp  mod.rs  (+14 more)
linux/: Cargo.toml  QUALITY.md  build-windows.ps1  build-windows.sh  build.rs  install-steamdeck.sh  install.sh  meson.build  meson_options.txt
linux/build-aux/: cargo-sources.json  dev.tunnel.Tunnel.Devel.yaml  dev.tunnel.Tunnel.yaml  dist-vendor.sh  flatpak-cargo-generator.py
linux/build-aux/meson/: cargo_wrapper.py  postinstall.py
linux/data/: dev.tunnel.Tunnel.desktop.in  dev.tunnel.Tunnel.metainfo.xml.in  dev.tunnel.Tunnel.service.in  meson.build
linux/data/resources/: dev.tunnel.Tunnel.gresource.xml  style.css  window.ui
linux/packaging/windows/: firewall.wxs
linux/po/: POTFILES.in
linux/scripts/: analyze_capture.sh
linux/src/: app.rs  application.rs  config.rs  discovery.rs  inhibit.rs  localsend.rs  main.rs  meson.build  protocol.rs  sync.rs  tls.rs  transfer.rs
linux/src/app/: actions.rs  handlers.rs  mod.rs  network.rs  state.rs  types.rs
linux/src/app/handlers/: cancel.rs  info.rs  mod.rs  prepare_upload.rs  upload.rs
linux/src/tls/: mod.rs  stack.rs  tofu_store.rs  verifier.rs
linux/src/transfer/: helpers.rs  mod.rs  zip.rs
linux/src/ui/: dialogs.rs  display_error.rs  event_handler.rs  helpers.rs  mod.rs  notifications.rs  peer_list.rs  preferences.rs  transfer_state.rs
linux/src/window/: imp.rs  mod.rs
mac/: Package.resolved  Package.swift  Tunnel.entitlements  build.sh
mac/Sources/Tunnel/: AppModel+HTTPHandlers.swift  AppModel.swift  Config.swift  ContentView.swift  Discovery.swift  IncomingRequestSheet.swift  NWConnectionHelpers.swift  PeerRow.swift  Protocol.swift  TLSManager.swift  Transfer.swift  TunnelApp.swift
(+382 files in other folders)
