[package]
name = "shortwave"
version = "0.0.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
ashpd = { version = "0.12", features = [
    "gtk4",
    "async-std",
], default-features = false }
async-channel = "2.5"
async-compat = "0.2"
async-io = "2.6"
hickory-resolver = { version = "0.25", features = ["system-config"] }
cacache = "13.1"
cast-sender = "0.3"
cruet = "0.15"
diesel = { version = "2.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.3"
futures-util = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
indexmap = "2.12"
language-tags = "0.3"
log = "0.4"
mdns-sd = "0.17"
mpris-server = "0.9"
pretty_env_logger = "0.5"
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.12" }
sanitize-filename = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
strum = "0.27"
strum_macros = "0.27"
sys-locale = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "sync"] }
url = "2.5"
uuid = { version = "1.19", features = ["v4"] }

adw = { version = "0.8", package = "libadwaita", features = ["v1_7"] }
glycin = { package = "libglycin-rebind", version = "0.0.1" }
glycin-gtk4 = { package = "libglycin-gtk4-rebind", version = "0.0.1" }
gstreamer = { version = "0.24" }
gstreamer-audio = { version = "0.24" }
gtk = { version = "0.10", package = "gtk4", features = ["gnome_46"] }
shumate = { version = "0.7", package = "libshumate" }
